# thingy

./: .gitmodules  CMakeLists.txt  Kconfig  config_documentation.md  prj.conf  shell_commands_documentation.md  sysbuild.conf
boards/: thingy91x_nrf9151_ns.overlay
boards/KalScott/: CMakeLists.txt  Kconfig.defconfig  Kconfig.defconfig.nrf9151  Kconfig.kestrel  Kconfig.sysbuild  bmm350_init_minimal.c  board.cmake  board.yml  kestrel_nrf9151.dts  kestrel_nrf9151.yaml  kestrel_nrf9151_common.dts  kestrel_nrf9151_defconfig  kestrel_nrf9151_ns.dts  kestrel_nrf9151_ns.overlay  kestrel_nrf9151_ns.yaml  kestrel_nrf9151_ns_defconfig  kestrel_nrf9151_pm_static.yml  sysbuild.cmake
build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  GENERATED_NON_SECURE_SIGN_KEY_PRIVATE.pem  app_provision.hex  b0_container.hex  b0_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  dfu_application.zip_manifest.json  dfu_mcuboot.zip_manifest.json  domains.yaml  mcuboot_sysbuild_cache.txt.tmp  merged.hex  partitions.yml  pm.config  s0.hex  s1.hex  s1_image_sysbuild_cache.txt  signed_by_mcuboot_and_b0_mcuboot.hex  signed_by_mcuboot_and_b0_s1_image.hex  thingy_sysbuild_cache.txt
src/: additional_shell.c  additional_shell.h  config.c  config.h  encrypted_config.c  encrypted_config.h  encryption_helper.c  encryption_helper.h  fota.c  fota.h  gnss.c  gnss.h  heartbeat.c  heartbeat.h  lte_helper.c  lte_helper.h  main.c  modem_info.c  modem_info.h  mqtt_connection.c  mqtt_connection.h  pem_command.c  sensor.c  sensor.h  shell_commands.c  shell_commands.h
(+391 files in other folders)
